--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -177,8 +177,8 @@ add_dependencies(zedwallet version)
 
 # Finally build the binaries
 set_property(TARGET TurtleCoind PROPERTY OUTPUT_NAME "Mangocoind")
-set_property(TARGET zedwallet PROPERTY OUTPUT_NAME "mngwallet")
-set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "mngwallet-beta")
+set_property(TARGET zedwallet PROPERTY OUTPUT_NAME "mangowallet")
+set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "mangowallet-beta")
 set_property(TARGET WalletService PROPERTY OUTPUT_NAME "mangocoin-service")
 set_property(TARGET miner PROPERTY OUTPUT_NAME "miner")
 set_property(TARGET cryptotest PROPERTY OUTPUT_NAME "cryptotest")
