--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -22,8 +22,8 @@ ADD https://raw.githubusercontent.com/2acoin/checkpoints/master/checkpoints.csv 
 # In a multi-node testnet, we'll want to have the slave nodes "wait" for the master node to wake up, so let's get ready
 ADD https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh /tmp/
 
-ARG MANGOCOIN_BRANCH=master
-ENV MANGOCOIN_BRANCH=${MANGOCOIN_BRANCH}
+ARG 2ACOIN_BRANCH=master
+ENV 2ACOIN_BRANCH=${2ACOIN_BRANCH}
 
 # install build dependencies
 # checkout the latest tag
@@ -38,7 +38,7 @@ RUN apt-get update && \
       libboost1.58-all-dev && \
     git clone https://github.com/2acoin/2acoin.git /src/2acoin && \
     cd /src/2acoin && \
-    git checkout $MANGOCOIN_BRANCH && \
+    git checkout $2ACOIN_BRANCH && \
     sed -i '/std::vector<uint64_t> timestamps_o(timestamps);/i \\/*\n   Lower difficulty to static 500 for testnet\n   The rest of this function is ignored\n*\/\nreturn 500;\n\n' src/CryptoNoteCore/Currency.cpp && \
     sed -i -e 's/2ACoin/TwoACoin/' src/CryptoNoteConfig.h && \
     sed -i -e 's/0x4e, 0x29, 0xaa/0x29, 0x4e, 0xaa/' src/P2p/P2pNetworks.h && \
