--- a/src/config/version.h.in
+++ b/src/config/version.h.in
@@ -2,12 +2,12 @@
 #define STR(x) STR_HELPER(x)
 
 #define PROJECT_NAME "Mangocoin"
-#define PROJECT_SITE "https://github.com/mangocoinproject"
+#define PROJECT_SITE "https://mangocoin.online"
 #define PROJECT_COPYRIGHT "Copyright 2020, Mangocoin Developers"
 #define APP_VER_MAJOR 0
-#define APP_VER_MINOR 1
-#define APP_VER_REV 4
-#define APP_VER_BUILD 1287
+#define APP_VER_MINOR 2
+#define APP_VER_REV 0
+#define APP_VER_BUILD 120
 
 #define BUILD_COMMIT_ID "@VERSION@"
 #define PROJECT_VERSION STR(APP_VER_MAJOR) "." STR(APP_VER_MINOR) "." STR(APP_VER_REV)
