--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
 # daemon runs in the background
-# run something like tail /var/log/2acoind/current to see the status
+# run something like tail /var/log/Mangocoind/current to see the status
 # be sure to run with volumes, ie:
-# docker run -v $(pwd)/2acoind:/var/lib/2acoind -v $(pwd)/wallet:/home/2acoin --rm -ti 2acoin:latest
+# docker run -v $(pwd)/Mangocoind:/var/lib/Mangocoind -v $(pwd)/wallet:/home/mangocoin --rm -ti mangocoin:latest
 FROM ubuntu:16.04
 
 ADD https://github.com/just-containers/s6-overlay/releases/download/v1.21.2.2/s6-overlay-amd64.tar.gz /tmp/
@@ -10,7 +10,7 @@ RUN tar xzf /tmp/s6-overlay-amd64.tar.gz -C /
 ADD https://github.com/just-containers/socklog-overlay/releases/download/v2.1.0-0/socklog-overlay-amd64.tar.gz /tmp/
 RUN tar xzf /tmp/socklog-overlay-amd64.tar.gz -C /
 
-COPY . /src/2acoin
+COPY . /src/mangocoin
 
 
 # install build dependencies
@@ -24,22 +24,22 @@ RUN apt-get update && \
       g++-4.9 \
       git cmake \
       libboost1.58-all-dev && \
-    cd /src/2acoin && \
+    cd /src/mangocoin && \
     mkdir build && \
     cd build && \
     cmake -DCMAKE_CXX_FLAGS="-g0 -Os -fPIC -std=gnu++11" .. && \
     make -j$(nproc) && \
     mkdir -p /usr/local/bin && \
-    cp src/2ACoind /usr/local/bin/2ACoind && \
+    cp src/Mangocoind /usr/local/bin/Mangocoind && \
     cp src/walletd /usr/local/bin/walletd && \
     cp src/zedwallet /usr/local/bin/zedwallet && \
     cp src/miner /usr/local/bin/miner && \
-    strip /usr/local/bin/2ACoind && \
+    strip /usr/local/bin/Mangocoind && \
     strip /usr/local/bin/walletd && \
     strip /usr/local/bin/zedwallet && \
     strip /usr/local/bin/miner && \
     cd / && \
-    rm -rf /src/2acoin && \
+    rm -rf /src/mangocoin && \
     apt-get remove -y build-essential python-dev gcc-4.9 g++-4.9 git cmake libboost1.58-all-dev && \
     apt-get autoremove -y && \
     apt-get install -y  \
@@ -53,27 +53,27 @@ RUN apt-get update && \
       libboost-program-options1.58.0 \
       libicu55
 
-# setup the 2acoind service
-RUN useradd -r -s /usr/sbin/nologin -m -d /var/lib/2acoind 2acoind && \
-    useradd -s /bin/bash -m -d /home/2acoin 2acoin && \
-    mkdir -p /etc/services.d/2acoind/log && \
-    mkdir -p /var/log/2acoind && \
-    echo "#!/usr/bin/execlineb" > /etc/services.d/2acoind/run && \
-    echo "fdmove -c 2 1" >> /etc/services.d/2acoind/run && \
-    echo "cd /var/lib/2acoind" >> /etc/services.d/2acoind/run && \
-    echo "export HOME /var/lib/2acoind" >> /etc/services.d/2acoind/run && \
-    echo "s6-setuidgid 2acoind /usr/local/bin/2ACoind" >> /etc/services.d/2acoind/run && \
-    chmod +x /etc/services.d/2acoind/run && \
-    chown nobody:nogroup /var/log/2acoind && \
-    echo "#!/usr/bin/execlineb" > /etc/services.d/2acoind/log/run && \
-    echo "s6-setuidgid nobody" >> /etc/services.d/2acoind/log/run && \
-    echo "s6-log -bp -- n20 s1000000 /var/log/2acoind" >> /etc/services.d/2acoind/log/run && \
-    chmod +x /etc/services.d/2acoind/log/run && \
-    echo "/var/lib/2acoind true 2acoind 0644 0755" > /etc/fix-attrs.d/2acoind-home && \
-    echo "/home/2acoin true 2acoin 0644 0755" > /etc/fix-attrs.d/2acoin-home && \
-    echo "/var/log/2acoind true nobody 0644 0755" > /etc/fix-attrs.d/2acoind-logs
+# setup the Mangocoind service
+RUN useradd -r -s /usr/sbin/nologin -m -d /var/lib/Mangocoind Mangocoind && \
+    useradd -s /bin/bash -m -d /home/mangocoin mangocoin && \
+    mkdir -p /etc/services.d/Mangocoind/log && \
+    mkdir -p /var/log/Mangocoind && \
+    echo "#!/usr/bin/execlineb" > /etc/services.d/Mangocoind/run && \
+    echo "fdmove -c 2 1" >> /etc/services.d/Mangocoind/run && \
+    echo "cd /var/lib/Mangocoind" >> /etc/services.d/Mangocoind/run && \
+    echo "export HOME /var/lib/Mangocoind" >> /etc/services.d/Mangocoind/run && \
+    echo "s6-setuidgid Mangocoind /usr/local/bin/Mangocoind" >> /etc/services.d/Mangocoind/run && \
+    chmod +x /etc/services.d/Mangocoind/run && \
+    chown nobody:nogroup /var/log/Mangocoind && \
+    echo "#!/usr/bin/execlineb" > /etc/services.d/Mangocoind/log/run && \
+    echo "s6-setuidgid nobody" >> /etc/services.d/Mangocoind/log/run && \
+    echo "s6-log -bp -- n20 s1000000 /var/log/Mangocoind" >> /etc/services.d/Mangocoind/log/run && \
+    chmod +x /etc/services.d/Mangocoind/log/run && \
+    echo "/var/lib/Mangocoind true Mangocoind 0644 0755" > /etc/fix-attrs.d/Mangocoind-home && \
+    echo "/home/mangocoin true mangocoin 0644 0755" > /etc/fix-attrs.d/mangocoin-home && \
+    echo "/var/log/Mangocoind true nobody 0644 0755" > /etc/fix-attrs.d/Mangocoind-logs
 
-VOLUME ["/var/lib/2acoind", "/home/2acoin","/var/log/2acoind"]
+VOLUME ["/var/lib/Mangocoind", "/home/mangocoin","/var/log/Mangocoind"]
 
 ENTRYPOINT ["/init"]
-CMD ["/usr/bin/execlineb", "-P", "-c", "emptyenv cd /home/2acoin export HOME /home/2acoin s6-setuidgid 2acoin /bin/bash"]
+CMD ["/usr/bin/execlineb", "-P", "-c", "emptyenv cd /home/mangocoin export HOME /home/mangocoin s6-setuidgid mangocoin /bin/bash"]
