--- a/src/BinaryInfo/service.rc
+++ b/src/BinaryInfo/service.rc
@@ -21,10 +21,10 @@ VS_VERSION_INFO VERSIONINFO
       BLOCK "000004b0"
       BEGIN
         VALUE "CompanyName",      PROJECT_SITE
-        VALUE "FileDescription",  PROJECT_NAME " 2ACoin-Service " PROJECT_VERSION_LONG
+        VALUE "FileDescription",  PROJECT_NAME " Mangocoin-Service " PROJECT_VERSION_LONG
         VALUE "FileVersion",      PROJECT_VERSION_BUILD_NO
         VALUE "LegalCopyright",   PROJECT_COPYRIGHT
-        VALUE "OriginalFilename", "2acoin-service.exe"
+        VALUE "OriginalFilename", "mangocoin-service.exe"
         VALUE "ProductName",      PROJECT_NAME
         VALUE "ProductVersion",   PROJECT_VERSION
       END
@@ -34,4 +34,3 @@ VS_VERSION_INFO VERSIONINFO
       VALUE "Translation", 0x0, 1200
     END
   END
-
