--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_definitions(-DSTATICLIB)
 
 # Add external libraries as include dirs, so we can do #include "httplib" for example
+include_directories(${CMAKE_SOURCE_DIR}/external/leveldb/include)
 include_directories(${CMAKE_SOURCE_DIR}/external/rocksdb/include)
 include_directories(${CMAKE_SOURCE_DIR}/external/cpp-linenoise)
 include_directories(${CMAKE_SOURCE_DIR}/external/cpp-httplib)
@@ -12,6 +13,7 @@ include_directories(${CMAKE_SOURCE_DIR}/external/cryptopp)
 include_directories(${CMAKE_SOURCE_DIR}/external/zstd)
 include_directories(${CMAKE_SOURCE_DIR}/external/lz4)
 include_directories(${CMAKE_SOURCE_DIR}/external/argon2/include)
+include_directories(${CMAKE_SOURCE_DIR}/external/snappy)
 
 # Show cmake where the source files are
 # Note, if you add remove a source file, you will need to re-run cmake so it
@@ -37,14 +39,13 @@ file(GLOB_RECURSE Rpc rpc/*)
 file(GLOB_RECURSE Serialization serialization/*)
 file(GLOB_RECURSE SubWallets subwallets/*)
 file(GLOB_RECURSE Transfers transfers/*)
-file(GLOB_RECURSE Mangocoind daemon/*)
+file(GLOB_RECURSE MangoCoind daemon/*)
 file(GLOB_RECURSE Utilities utilities/*)
 file(GLOB_RECURSE Wallet wallet/*)
 file(GLOB_RECURSE WalletApi walletapi/*)
 file(GLOB_RECURSE WalletBackend walletbackend/*)
 file(GLOB_RECURSE WalletService walletservice/*)
 file(GLOB_RECURSE WalletUpgrader walletupgrader/*)
-file(GLOB_RECURSE zedwallet zedwallet/*)
 file(GLOB_RECURSE zedwallet++ zedwallet++/*)
 
 if (MSVC)
@@ -56,7 +57,7 @@ else ()
 endif ()
 
 # Group the files together in IDEs
-source_group("" FILES $${Common} ${Config} ${Crypto} ${CryptoNoteCore} ${CryptoNoteProtocol} ${Mangocoind} ${JsonRpcServer} ${Http} ${Logging} ${Logger} ${miner} ${Mnemonics} ${Nigel} ${NodeRpcProxy} ${P2p} ${Rpc} ${Serialization} ${System} ${Transfers} ${Wallet} ${WalletApi} ${WalletBackend} ${WalletService} ${zedwallet} ${zedwallet++} ${CryptoTest} ${Errors} ${Utilities} ${SubWallets})
+source_group("" FILES $${Common} ${Config} ${Crypto} ${CryptoNoteCore} ${CryptoNoteProtocol} ${MangoCoind} ${JsonRpcServer} ${Http} ${Logging} ${Logger} ${miner} ${Mnemonics} ${Nigel} ${NodeRpcProxy} ${P2p} ${Rpc} ${Serialization} ${System} ${Transfers} ${Wallet} ${WalletApi} ${WalletBackend} ${WalletService} ${zedwallet++} ${CryptoTest} ${Errors} ${Utilities} ${WalletUpgrader} ${SubWallets})
 
 # Define a group of files as a library to link against
 add_library(BlockchainExplorer STATIC ${BlockchainExplorer})
@@ -109,20 +110,18 @@ endif ()
 add_executable(cryptotest ${CryptoTest} ${CT_SOURCES_OS})
 add_executable(miner ${miner} ${MINER_SOURCES_OS})
 add_executable(WalletService ${WalletService} ${PG_SOURCES_OS})
-add_executable(Mangocoind ${Mangocoind} ${DAEMON_SOURCES_OS})
+add_executable(MangoCoind ${MangoCoind} ${DAEMON_SOURCES_OS})
 add_executable(WalletApi ${WalletApi} ${WALLET_API_SOURCES_OS})
 add_executable(WalletUpgrader ${WalletUpgrader} ${WALLET_UPGRADER_SOURCES_OS})
-add_executable(zedwallet ${zedwallet} ${ZED_WALLET_SOURCES_OS})
 add_executable(zedwallet++ ${zedwallet++} ${ZED_WALLET_SOURCES_OS})
 
 if (MSVC)
     target_link_libraries(System ws2_32)
-    target_link_libraries(Mangocoind Rpcrt4)
+    target_link_libraries(MangoCoind Rpcrt4 ws2_32 advapi32 crypt32 gdi32 user32)
     target_link_libraries(WalletService Rpcrt4 ws2_32 advapi32 crypt32 gdi32 user32)
     target_link_libraries(zedwallet++ ws2_32 advapi32 crypt32 gdi32 user32)
     target_link_libraries(WalletApi ws2_32 advapi32 crypt32 gdi32 user32)
     target_link_libraries(miner ws2_32 advapi32 crypt32 gdi32 user32)
-    target_link_libraries(zedwallet ws2_32 advapi32 crypt32 gdi32 user32)
     target_link_libraries(WalletUpgrader ws2_32 advapi32 crypt32 gdi32 user32)
 endif ()
 
@@ -138,9 +137,9 @@ elseif (UNIX)
 endif ()
 
 if (MSVC)
-    target_link_libraries(Mangocoind System CryptoNoteCore rocksdb zstd lz4 Errors ${Boost_LIBRARIES})
+    target_link_libraries(MangoCoind System CryptoNoteCore rocksdb zstd lz4 leveldb snappy Errors ${Boost_LIBRARIES})
 else ()
-    target_link_libraries(Mangocoind System CryptoNoteCore rocksdblib zstd lz4 Errors ${Boost_LIBRARIES})
+    target_link_libraries(MangoCoind System CryptoNoteCore rocksdblib zstd lz4 leveldblib snappy Errors ${Boost_LIBRARIES})
 endif ()
 
 # Add the dependencies we need
@@ -151,9 +150,9 @@ target_link_libraries(cryptotest Crypto Common)
 target_link_libraries(Errors Crypto SubWallets Utilities)
 target_link_libraries(Logging Common)
 target_link_libraries(miner Crypto Errors Utilities System Serialization)
-target_link_libraries(Nigel Errors)
+target_link_libraries(Nigel Errors CryptoNoteCore)
 target_link_libraries(NodeRpcProxy Rpc)
-target_link_libraries(P2P upnpc-static Serialization)
+target_link_libraries(P2P upnpc-static Serialization System CryptoNoteCore)
 target_link_libraries(Rpc P2P Utilities CryptoNoteCore)
 target_link_libraries(Serialization Common Crypto ${Boost_LIBRARIES})
 target_link_libraries(SubWallets Common Logger)
@@ -164,7 +163,6 @@ target_link_libraries(WalletApi WalletBackend)
 target_link_libraries(WalletBackend Serialization Mnemonics Nigel cryptopp-static __filesystem Utilities SubWallets Logger Config Wallet)
 target_link_libraries(WalletService JsonRpcServer Wallet Mnemonics Errors)
 target_link_libraries(WalletUpgrader Utilities WalletBackend Common)
-target_link_libraries(zedwallet Mnemonics Wallet Utilities Errors)
 target_link_libraries(zedwallet++ WalletBackend)
 
 if (OPENSSL_FOUND)
@@ -173,6 +171,7 @@ if (OPENSSL_FOUND)
     target_link_libraries(WalletApi ${OPENSSL_LIBRARIES})
     target_link_libraries(zedwallet++ ${OPENSSL_LIBRARIES})
     target_link_libraries(WalletService ${OPENSSL_LIBRARIES})
+    target_link_libraries(MangoCoind ${OPENSSL_LIBRARIES})
 endif ()
 
 # Add dependencies means we have to build the latter before we build the former
@@ -183,24 +182,24 @@ add_dependencies(miner version)
 add_dependencies(JsonRpcServer version)
 add_dependencies(P2P version)
 add_dependencies(Rpc version)
-add_dependencies(Mangocoind version)
+add_dependencies(MangoCoind version)
 add_dependencies(WalletUpgrader version)
 add_dependencies(WalletApi version)
 add_dependencies(WalletService version)
-add_dependencies(zedwallet version)
+add_dependencies(zedwallet++ version)
 
 # Finally build the binaries
-set_property(TARGET Mangocoind PROPERTY OUTPUT_NAME "Mangocoind")
-set_property(TARGET zedwallet PROPERTY OUTPUT_NAME "mangowallet")
-set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "mangowallet-beta")
-set_property(TARGET WalletService PROPERTY OUTPUT_NAME "mangocoin-service")
+set_property(TARGET MangoCoind PROPERTY OUTPUT_NAME "2ACoind")
+set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "zedwallet")
+set_property(TARGET WalletService PROPERTY OUTPUT_NAME "2acoin-service")
 set_property(TARGET miner PROPERTY OUTPUT_NAME "miner")
 set_property(TARGET cryptotest PROPERTY OUTPUT_NAME "cryptotest")
 set_property(TARGET WalletApi PROPERTY OUTPUT_NAME "wallet-api")
 set_property(TARGET WalletUpgrader PROPERTY OUTPUT_NAME "wallet-upgrader")
 
 # Additional make targets, can be used to build a subset of the targets
-# e.g. make pool will build only Mangocoind and service
-add_custom_target(pool DEPENDS Mangocoind WalletService)
-add_custom_target(solominer DEPENDS Mangocoind zedwallet miner)
-add_custom_target(cli DEPENDS Mangocoind zedwallet)
+# e.g. make pool will build only MangoCoind and service
+add_custom_target(pool DEPENDS MangoCoind WalletService)
+add_custom_target(solominer DEPENDS MangoCoind zedwallet++ miner)
+add_custom_target(cli DEPENDS MangoCoind zedwallet++)
+add_custom_target(zedwallet DEPENDS zedwallet++)
