--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -189,9 +189,9 @@ add_dependencies(WalletService version)
 add_dependencies(zedwallet++ version)
 
 # Finally build the binaries
-set_property(TARGET MangoCoind PROPERTY OUTPUT_NAME "2ACoind")
-set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "zedwallet")
-set_property(TARGET WalletService PROPERTY OUTPUT_NAME "2acoin-service")
+set_property(TARGET MangoCoind PROPERTY OUTPUT_NAME "Mangocoind")
+set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "mangowallet")
+set_property(TARGET WalletService PROPERTY OUTPUT_NAME "mangocoin-service")
 set_property(TARGET miner PROPERTY OUTPUT_NAME "miner")
 set_property(TARGET cryptotest PROPERTY OUTPUT_NAME "cryptotest")
 set_property(TARGET WalletApi PROPERTY OUTPUT_NAME "wallet-api")
