--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ include_directories(${CMAKE_SOURCE_DIR}/external/argon2/include)
 # Show cmake where the source files are
 # Note, if you add remove a source file, you will need to re-run cmake so it
 # can find the new file
+file(GLOB_RECURSE BlockchainExplorer blockchainexplorer/*)
 file(GLOB_RECURSE Common common/*)
 file(GLOB_RECURSE Config config/*)
 file(GLOB_RECURSE Crypto crypto/*)
@@ -36,7 +37,7 @@ file(GLOB_RECURSE Rpc rpc/*)
 file(GLOB_RECURSE Serialization serialization/*)
 file(GLOB_RECURSE SubWallets subwallets/*)
 file(GLOB_RECURSE Transfers transfers/*)
-file(GLOB_RECURSE MangoCoind daemon/*)
+file(GLOB_RECURSE 2ACoind daemon/*)
 file(GLOB_RECURSE Utilities utilities/*)
 file(GLOB_RECURSE Wallet wallet/*)
 file(GLOB_RECURSE WalletApi walletapi/*)
@@ -55,9 +56,10 @@ else ()
 endif ()
 
 # Group the files together in IDEs
-source_group("" FILES $${Common} ${Config} ${Crypto} ${CryptoNoteCore} ${CryptoNoteProtocol} ${MangoCoind} ${JsonRpcServer} ${Http} ${Logging} ${Logger} ${miner} ${Mnemonics} ${Nigel} ${NodeRpcProxy} ${P2p} ${Rpc} ${Serialization} ${System} ${Transfers} ${Wallet} ${WalletApi} ${WalletBackend} ${WalletService} ${zedwallet} ${zedwallet++} ${CryptoTest} ${Errors} ${Utilities} ${SubWallets})
+source_group("" FILES $${Common} ${Config} ${Crypto} ${CryptoNoteCore} ${CryptoNoteProtocol} ${2ACoind} ${JsonRpcServer} ${Http} ${Logging} ${Logger} ${miner} ${Mnemonics} ${Nigel} ${NodeRpcProxy} ${P2p} ${Rpc} ${Serialization} ${System} ${Transfers} ${Wallet} ${WalletApi} ${WalletBackend} ${WalletService} ${zedwallet} ${zedwallet++} ${CryptoTest} ${Errors} ${Utilities} ${SubWallets})
 
 # Define a group of files as a library to link against
+add_library(BlockchainExplorer STATIC ${BlockchainExplorer})
 add_library(Common STATIC ${Common})
 add_library(Config STATIC ${Config})
 add_library(Crypto STATIC ${Crypto})
@@ -107,7 +109,7 @@ endif ()
 add_executable(cryptotest ${CryptoTest} ${CT_SOURCES_OS})
 add_executable(miner ${miner} ${MINER_SOURCES_OS})
 add_executable(WalletService ${WalletService} ${PG_SOURCES_OS})
-add_executable(MangoCoind ${MangoCoind} ${DAEMON_SOURCES_OS})
+add_executable(2ACoind ${2ACoind} ${DAEMON_SOURCES_OS})
 add_executable(WalletApi ${WalletApi} ${WALLET_API_SOURCES_OS})
 add_executable(WalletUpgrader ${WalletUpgrader} ${WALLET_UPGRADER_SOURCES_OS})
 add_executable(zedwallet ${zedwallet} ${ZED_WALLET_SOURCES_OS})
@@ -115,7 +117,7 @@ add_executable(zedwallet++ ${zedwallet++} ${ZED_WALLET_SOURCES_OS})
 
 if (MSVC)
     target_link_libraries(System ws2_32)
-    target_link_libraries(MangoCoind Rpcrt4)
+    target_link_libraries(2ACoind Rpcrt4)
     target_link_libraries(WalletService Rpcrt4 ws2_32 advapi32 crypt32 gdi32 user32)
     target_link_libraries(zedwallet++ ws2_32 advapi32 crypt32 gdi32 user32)
     target_link_libraries(WalletApi ws2_32 advapi32 crypt32 gdi32 user32)
@@ -136,9 +138,9 @@ elseif (UNIX)
 endif ()
 
 if (MSVC)
-    target_link_libraries(MangoCoind System CryptoNoteCore rocksdb zstd lz4 Errors ${Boost_LIBRARIES})
+    target_link_libraries(2ACoind System CryptoNoteCore rocksdb zstd lz4 Errors ${Boost_LIBRARIES})
 else ()
-    target_link_libraries(MangoCoind System CryptoNoteCore rocksdblib zstd lz4 Errors ${Boost_LIBRARIES})
+    target_link_libraries(2ACoind System CryptoNoteCore rocksdblib zstd lz4 Errors ${Boost_LIBRARIES})
 endif ()
 
 # Add the dependencies we need
@@ -181,16 +183,16 @@ add_dependencies(miner version)
 add_dependencies(JsonRpcServer version)
 add_dependencies(P2P version)
 add_dependencies(Rpc version)
-add_dependencies(MangoCoind version)
+add_dependencies(2ACoind version)
 add_dependencies(WalletUpgrader version)
 add_dependencies(WalletApi version)
 add_dependencies(WalletService version)
 add_dependencies(zedwallet version)
 
 # Finally build the binaries
-set_property(TARGET MangoCoind PROPERTY OUTPUT_NAME "Mangocoind")
-set_property(TARGET zedwallet PROPERTY OUTPUT_NAME "mangocoinwallet")
-set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "mangocoinwallet-beta")
+set_property(TARGET 2ACoind PROPERTY OUTPUT_NAME "Mangocoind")
+set_property(TARGET zedwallet PROPERTY OUTPUT_NAME "mangowallet")
+set_property(TARGET zedwallet++ PROPERTY OUTPUT_NAME "mangowallet-beta")
 set_property(TARGET WalletService PROPERTY OUTPUT_NAME "mangocoin-service")
 set_property(TARGET miner PROPERTY OUTPUT_NAME "miner")
 set_property(TARGET cryptotest PROPERTY OUTPUT_NAME "cryptotest")
@@ -198,7 +200,7 @@ set_property(TARGET WalletApi PROPERTY OUTPUT_NAME "wallet-api")
 set_property(TARGET WalletUpgrader PROPERTY OUTPUT_NAME "wallet-upgrader")
 
 # Additional make targets, can be used to build a subset of the targets
-# e.g. make pool will build only MangoCoind and service
-add_custom_target(pool DEPENDS MangoCoind WalletService)
-add_custom_target(solominer DEPENDS MangoCoind zedwallet miner)
-add_custom_target(cli DEPENDS MangoCoind zedwallet)
+# e.g. make pool will build only 2ACoind and service
+add_custom_target(pool DEPENDS 2ACoind WalletService)
+add_custom_target(solominer DEPENDS 2ACoind zedwallet miner)
+add_custom_target(cli DEPENDS 2ACoind zedwallet)
