--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,12 +1,12 @@
 # WHAT IS THIS FOR?
 # This is a copy of Dockerfile, but prior to compiling, will set difficult to 500, resets all the
-# seed nodes to 127.0.0.1 (to avoid annoying mainnet), changes the daemon name to "TwoACoin, and mixes up the network ID.
+# seed nodes to 127.0.0.1 (to avoid annoying mainnet), changes the daemon name to "MangoCoind, and mixes up the network ID.
 # Useless for mainnet, but used to setup a testnet with checkpoints, and not have to spend days mining to get to the next block!
 #
 # daemon runs in the background
-# run something like tail /var/log/2acoind/current to see the status
+# run something like tail /var/log/Mangocoind/current to see the status
 # be sure to run with volumes, ie:
-# docker run -v $(pwd)/2acoind:/var/lib/2acoind -v $(pwd)/wallet:/home/2acoin --rm -ti 2acoin:0.2.2
+# docker run -v $(pwd)/Mangocoind:/var/lib/Mangocoind -v $(pwd)/wallet:/home/mangocoin --rm -ti mangocoin:0.2.2
 ARG base_image_version=0.10.0
 FROM phusion/baseimage:$base_image_version
 
@@ -17,13 +17,13 @@ ADD https://github.com/just-containers/socklog-overlay/releases/download/v2.1.0-
 RUN tar xzf /tmp/socklog-overlay-amd64.tar.gz -C /
 
 # Get the latest checkpoints (we don't care about being _100%_ up-to-date, but we need to be past block 5 for the algo change to CN_lite_v1)
-ADD https://raw.githubusercontent.com/2acoin/checkpoints/master/checkpoints.csv /tmp/
+ADD https://raw.githubusercontent.com/mangocoin/checkpoints/master/checkpoints.csv /tmp/
 
 # In a multi-node testnet, we'll want to have the slave nodes "wait" for the master node to wake up, so let's get ready
 ADD https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh /tmp/
 
-ARG 2ACOIN_BRANCH=master
-ENV 2ACOIN_BRANCH=${2ACOIN_BRANCH}
+ARG MANGOCOIN_BRANCH=master
+ENV MANGOCOIN_BRANCH=${MANGOCOIN_BRANCH}
 
 # install build dependencies
 # checkout the latest tag
@@ -36,27 +36,27 @@ RUN apt-get update && \
       g++-4.9 \
       git cmake \
       libboost1.58-all-dev && \
-    git clone https://github.com/2acoin/2acoin.git /src/2acoin && \
-    cd /src/2acoin && \
-    git checkout $2ACOIN_BRANCH && \
+    git clone https://github.com/mangocoinproject/mangocoin.git /src/mangocoin && \
+    cd /src/mangocoin && \
+    git checkout $MANGOCOIN_BRANCH && \
     sed -i '/std::vector<uint64_t> timestamps_o(timestamps);/i \\/*\n   Lower difficulty to static 500 for testnet\n   The rest of this function is ignored\n*\/\nreturn 500;\n\n' src/CryptoNoteCore/Currency.cpp && \
-    sed -i -e 's/2ACoin/TwoACoin/' src/CryptoNoteConfig.h && \
+    sed -i -e 's/mangocoin/TwoACoin/' src/CryptoNoteConfig.h && \
     sed -i -e 's/0x4e, 0x29, 0xaa/0x29, 0x4e, 0xaa/' src/P2p/P2pNetworks.h && \
     mkdir build && \
     cd build && \
     cmake -DCMAKE_CXX_FLAGS="-g0 -Os -fPIC -std=gnu++11" .. && \
     make -j$(nproc) && \
     mkdir -p /usr/local/bin && \
-    cp src/2ACoind /usr/local/bin/2ACoind && \
+    cp src/Mangocoind /usr/local/bin/Mangocoind && \
     cp src/walletd /usr/local/bin/walletd && \
     cp src/zedwallet /usr/local/bin/zedwallet && \
     cp src/miner /usr/local/bin/miner && \
-    strip /usr/local/bin/2ACoind && \
+    strip /usr/local/bin/Mangocoind && \
     strip /usr/local/bin/walletd && \
     strip /usr/local/bin/zedwallet && \
     strip /usr/local/bin/miner && \
     cd / && \
-    rm -rf /src/2acoin && \
+    rm -rf /src/mangocoin && \
     apt-get remove -y build-essential python-dev gcc-4.9 g++-4.9 git cmake libboost1.58-all-dev && \
     apt-get autoremove -y && \
     apt-get install -y  \
@@ -70,29 +70,29 @@ RUN apt-get update && \
       libboost-program-options1.58.0 \
       libicu55
 
-# setup the 2acoind service
-RUN useradd -r -s /usr/sbin/nologin -m -d /var/lib/2acoind 2acoind && \
-    useradd -s /bin/bash -m -d /home/2acoin 2acoin && \
-    mkdir -p /etc/services.d/2acoind/log && \
-    mkdir -p /var/log/2acoind && \
-    echo "#!/usr/bin/execlineb" > /etc/services.d/2acoind/run && \
-    echo "fdmove -c 2 1" >> /etc/services.d/2acoind/run && \
-    echo "cd /var/lib/2acoind" >> /etc/services.d/2acoind/run && \
-    echo "export HOME /var/lib/2acoind" >> /etc/services.d/2acoind/run && \
-    echo "s6-setuidgid 2acoind /usr/local/bin/2ACoind --log-level=2" >> /etc/services.d/2acoind/run && \
-    chmod +x /etc/services.d/2acoind/run && \
+# setup the Mangocoind service
+RUN useradd -r -s /usr/sbin/nologin -m -d /var/lib/Mangocoind Mangocoind && \
+    useradd -s /bin/bash -m -d /home/mangocoin mangocoin && \
+    mkdir -p /etc/services.d/Mangocoind/log && \
+    mkdir -p /var/log/Mangocoind && \
+    echo "#!/usr/bin/execlineb" > /etc/services.d/Mangocoind/run && \
+    echo "fdmove -c 2 1" >> /etc/services.d/Mangocoind/run && \
+    echo "cd /var/lib/Mangocoind" >> /etc/services.d/Mangocoind/run && \
+    echo "export HOME /var/lib/Mangocoind" >> /etc/services.d/Mangocoind/run && \
+    echo "s6-setuidgid Mangocoind /usr/local/bin/Mangocoind --log-level=2" >> /etc/services.d/Mangocoind/run && \
+    chmod +x /etc/services.d/Mangocoind/run && \
     chmod +x /tmp/wait-for-it.sh && \
-    chown nobody:nogroup /var/log/2acoind && \
-    echo "#!/usr/bin/execlineb" > /etc/services.d/2acoind/log/run && \
-    echo "s6-setuidgid nobody" >> /etc/services.d/2acoind/log/run && \
-    echo "s6-log -bp -- n20 s1000000 /var/log/2acoind" >> /etc/services.d/2acoind/log/run && \
-    chmod +x /etc/services.d/2acoind/log/run && \
-    echo "/var/lib/2acoind true 2acoind 0644 0755" > /etc/fix-attrs.d/2acoind-home && \
-    echo "/home/2acoin true 2acoin 0644 0755" > /etc/fix-attrs.d/2acoin-home && \
-    echo "/tmp/checkpoints.csv true 2acoin 0644 0755" > /etc/fix-attrs.d/2acoin-checkpoints && \
-    echo "/var/log/2acoind true nobody 0644 0755" > /etc/fix-attrs.d/2acoind-logs
+    chown nobody:nogroup /var/log/Mangocoind && \
+    echo "#!/usr/bin/execlineb" > /etc/services.d/Mangocoind/log/run && \
+    echo "s6-setuidgid nobody" >> /etc/services.d/Mangocoind/log/run && \
+    echo "s6-log -bp -- n20 s1000000 /var/log/Mangocoind" >> /etc/services.d/Mangocoind/log/run && \
+    chmod +x /etc/services.d/Mangocoind/log/run && \
+    echo "/var/lib/Mangocoind true Mangocoind 0644 0755" > /etc/fix-attrs.d/Mangocoind-home && \
+    echo "/home/mangocoin true mangocoin 0644 0755" > /etc/fix-attrs.d/mangocoin-home && \
+    echo "/tmp/checkpoints.csv true mangocoin 0644 0755" > /etc/fix-attrs.d/mangocoin-checkpoints && \
+    echo "/var/log/Mangocoind true nobody 0644 0755" > /etc/fix-attrs.d/Mangocoind-logs
 
-VOLUME ["/var/lib/2acoind", "/home/2acoin","/var/log/2acoind"]
+VOLUME ["/var/lib/Mangocoind", "/home/mangocoin","/var/log/Mangocoind"]
 
 ENTRYPOINT ["/init"]
-CMD ["/usr/bin/execlineb", "-P", "-c", "emptyenv cd /home/2acoin export HOME /home/2acoin s6-setuidgid 2acoin tail -f /var/log/2acoind/current"]
+CMD ["/usr/bin/execlineb", "-P", "-c", "emptyenv cd /home/mangocoin export HOME /home/mangocoin s6-setuidgid mangocoin tail -f /var/log/Mangocoind/current"]
